--- a/web/etc/nginx.conf
+++ b/web/etc/nginx.conf
@@ -1,11 +1,11 @@
 	server {
-		server_name localhost;
+		server_name 0.0.0.0;
 		listen 80;
 		location /uploads/ {
-			root /home/box/web/uploads;
+			root /home/box/web/;
 		}
-		location ~* \.[^\/]* {
-			root /home/box/web/public;
+		location ~* \.[^\/]+ {
+			root /home/box/web/public/;
 		}
 	}
 
