--- a/web/etc/nginx.conf
+++ b/web/etc/nginx.conf
@@ -1,7 +1,7 @@
 	server {
 		server_name 0.0.0.0;
 		listen 80;
-		location /uploads/ {
+		location ^~ /uploads/ {
 			root /home/box/web/;
 		}
 		location ~* \.[^\/]+ {
