--- a/web/etc/nginx.conf
+++ b/web/etc/nginx.conf
@@ -7,5 +7,8 @@
 		location ~* \.[^\/]+ {
 			root /home/box/web/public/;
 		}
+		location /hello/ {
+			proxy_pass http://127.0.0.1:8080/;
+		}
 	}
 
