--- a/web/etc/nginx.conf
+++ b/web/etc/nginx.conf
@@ -10,5 +10,8 @@
 		location /hello/ {
 			proxy_pass http://127.0.0.1:8080/;
 		}
+		location / {
+			proxy_pass http://127.0.0.1:8000/;
+		}
 	}
 
